<resources>

    <string name="app_name">NeusFeet</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>

    <string name="search_hint">Search news…</string>
    <string name="read_article">Read article</string>
    <string name="empty_articles">Nothing to show…</string>

    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="language">Language</string>

    <string name="open_in_browser">Open in browser</string>

    <string name="bookmark_added">Bookmark added!</string>
    <string name="bookmark_removed">Bookmark removed!</string>

</resources>
