<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/home"
            app:showAsAction="always"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
    <item
            android:id="@+id/search"
            app:showAsAction="always"
            android:title="@string/search"
            android:icon="@drawable/ic_search"/>
    <item
            android:id="@+id/bookmarks"
            app:showAsAction="always"
            android:title="@string/bookmarks"
            android:icon="@drawable/ic_bookmark"/>
    <item
            android:id="@+id/settings"
            app:showAsAction="always"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>

</menu>