<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.krendel.neusfeet.screens.settings.SettingsViewMvc" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/alabaster"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:fontFamily="@font/sfui_bold"
                android:gravity="center"
                android:text="@string/country"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:fontFamily="@font/sfui_bold"
                android:gravity="center"
                android:text="@string/language"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?selectableItemBackground"
                android:fontFamily="@font/sfui_bold"
                android:gravity="center"
                android:text="@string/category"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>
</layout>